--- a/style.css
+++ b/style.css
@@ -247,3 +247,17 @@ header {
     padding-left: 1em;
   }
 }
+  .nav-links a {
+    font-weight: 400;
+    line-height: 1;
+    font-size: 10px;
+    color: black;
+    text-decoration: none;
+  }
+  .scroll {
+    margin: 0;
+  }
+  .main {
+    padding: 0;
+  }
+}
