--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ header {
     font-family: "Jaldi", sans-serif;
   }
   .image-wrapper p {
-    color: #f0f0f0;
+   visibility: hidden;
   }
   .container-image {
     margin-top: 0vh;
@@ -250,12 +250,12 @@ header {
   .nav-links a {
     font-weight: 400;
     line-height: 1;
-    font-size: 10px;
+    font-size: 11px;
     color: black;
     text-decoration: none;
   }
   .scroll {
-    margin: 0;
+   margin: 0px 0px 20px 0px;
   }
   .main {
     padding: 0;
