--- a/style.css
+++ b/style.css
@@ -15,8 +15,13 @@ header {
   border-bottom: 1px solid #3b3b3b;
 }
 .logo {
+  padding-left: 1em;
+  overflow: hidden;
   padding-bottom: 5px;
   margin-top: 1em;
+}
+.nav-links {
+  overflow-x: hidden;
 }
 
 .nav-links a {
@@ -30,6 +35,13 @@ header {
 .nav-links li {
   display: inline-block;
   margin-right: 40px;
+}
+
+.hero-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .hero-text {
@@ -62,6 +74,8 @@ header {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1em;
+  margin-bottom: 5vh;
+  padding-bottom: 1em;
 }
 .image-wrapper img {
   margin-top: 5px;
@@ -134,4 +148,134 @@ header {
 .text1 :hover {
   color: white;
   background-color: rgb(0, 0, 0);
+}
+
+.photo {
+  overflow: hidden;
+  margin: 20px;
+}
+.container-image {
+  font-family: sans-serif;
+  margin: 0px;
+  margin-top: 5vh;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  align-items: center;
+  padding: 1em;
+  gap: 1em;
+}
+.image_1 img {
+  object-fit: cover;
+  margin-top: 5px;
+  width: 100%;
+  height: 100%;
+  object-position: bottom;
+}
+.image_1 {
+  height: 60vh;
+}
+.Text_1 h3 {
+  font-family: "Share Tech Mono";
+  font-weight: 400;
+  line-height: 2.6rem;
+  font-size: 3vw;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+}
+.Title {
+  display: flex;
+  justify-content: flex-start;
+  gap: 1em;
+}
+.scroll {
+  padding: 2em;
+  border-top: 1px solid rgb(42, 42, 42);
+  overflow: hidden;
+  margin: 20px 36px;
+  border-bottom: 1px solid black;
+}
+.Title h3 {
+  white-space: nowrap;
+  animation: 5000ms linear infinite move-rt1;
+}
+@keyframes move-rt1 {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+    transition: all 0.3s ease-in-out 0s;
+  }
+}
+
+/* Resposive */
+
+@media (max-width: 700px) {
+  .hero-text h1 {
+    color: #000000;
+    font-family: "Founders Grotesk Web", sans-serif;
+    line-height: 1;
+    font-size: 5vh;
+    text-transform: uppercase;
+  }
+  .hero-text p {
+    padding-top: 1em;
+    width: 100%;
+    display: inline-block;
+    margin-top: 1vw;
+    line-height: 1;
+    text-transform: none;
+    font-size: small;
+  }
+  .text1 li {
+    font-family: "Share Tech Mono";
+    font-weight: 400;
+    line-height: 2.6rem;
+    font-size: 1em;
+    text-transform: uppercase;
+    list-style: none;
+  }
+  .box2 p {
+    padding-left: 10px;
+    margin-bottom: 0.4em;
+    width: 100%;
+    display: flex;
+    justify-content: start;
+    text-align: justify;
+    line-height: 1.3em;
+    font-family: "Jaldi", sans-serif;
+  }
+  .image-wrapper p {
+    visibility: hidden;
+  }
+  .container-image {
+    margin-top: 0vh;
+  }
+  .Text_1 h3 {
+    font-size: 4vw;
+  }
+  .main :nth-child(1) {
+    grid-row: span 2;
+  }
+  .box1 {
+    align-items: center;
+  }
+  .logo {
+    padding-left: 1em;
+  }
+
+  .nav-links a {
+    font-weight: 400;
+    line-height: 1;
+    font-size: 10px;
+    color: black;
+    text-decoration: none;
+  }
+  .scroll {
+    margin: 0px 0px 20px 0px;
+  }
+  .main {
+    padding: 0;
+  }
 }
