--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid #3b3b3b;
+  border-bottom: 1px solid #2a2a2a;
 }
 .logo {
   padding-left: 1em;
@@ -176,9 +176,13 @@ header {
   height: 60vh;
 }
 .Text_1 h3 {
-  font-family: "Share Tech Mono";
+  text-rendering: geometricPrecision;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Bebas Neue", cursive;
+  color: #2a2a2a;
   font-weight: 400;
   font-size: 3vw;
+  line-height: 0.7em;
   text-transform: uppercase;
   display: flex;
   justify-content: center;
@@ -188,6 +192,11 @@ header {
   justify-content: flex-start;
   gap: 1em;
 }
+.nav :hover {
+  background-color: #000000;
+  color: white;
+  cursor: pointer;
+}
 .scroll {
   padding: 2em;
   border-top: 1px solid rgb(42, 42, 42);
@@ -196,16 +205,20 @@ header {
   border-bottom: 1px solid black;
 }
 .Title h3 {
+  text-rendering: geometricPrecision;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Bebas Neue", cursive;
+  color: #2a2a2a;
+  font-size: 2.5rem;
   white-space: nowrap;
-  animation: 5000ms linear infinite move-rt1;
+  animation: marque 10s linear infinite;
 }
-@keyframes move-rt1 {
+@keyframes marque {
   0% {
     transform: translateX(0%);
   }
   100% {
     transform: translateX(-100%);
-    transition: all 0.3s ease-in-out 0s;
   }
 }
 .logo img {
@@ -289,5 +302,16 @@ header {
   }
   .main {
     padding: 0;
+  }
+  .Text_1 h3 {
+    font-family: "Bebas Neue", cursive;
+    color: #181818;
+    margin: 4rem;
+    font-weight: 400;
+    font-size: 10vw;
+    line-height: 0.7em;
+    text-transform: uppercase;
+    display: flex;
+    justify-content: center;
   }
 }
