--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ header {
   height: 100vh;
 }
 .photo {
-  height: 100vh;
+  height: 66vh;
 }
 .footer-wrapper {
   margin-top: 3vh;
@@ -268,7 +268,46 @@ header {
   display: flex;
   justify-content: center;
 }
-
+.black {
+  display: flex;
+  flex-direction: row-reverse;
+  margin: 2rem;
+  height: 100vh;
+  justify-content: space-between;
+  align-items: center;
+}
+.text-wrapper1 h3 {
+  letter-spacing: 1px;
+  font-family: "Bebas Neue", cursive;
+  color: #2a2a2a;
+  font-size: 2.5rem;
+}
+.text-wrapper1 p {
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+  line-height: 1.7em;
+  width: 80%;
+  text-align: justify;
+}
+.text-wrapper1 button {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+  width: 150px;
+  border-radius: 5px;
+  background-color: rgb(22, 22, 22);
+  color: white;
+  cursor: pointer;
+}
+.image-wrapper1 {
+  height: 80vh;
+}
+.image-wrapper1 img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
 /* Resposive */
 
 @media (max-width: 700px) {
@@ -348,5 +387,8 @@ header {
     text-transform: uppercase;
     display: flex;
     justify-content: center;
+  }
+  .photo {
+    height: 92vh;
   }
 }
