--- a/style.css
+++ b/style.css
@@ -269,6 +269,7 @@ header {
   justify-content: center;
 }
 .black {
+  overflow: hidden;
   display: flex;
   flex-direction: row-reverse;
   margin: 2rem;
@@ -283,8 +284,8 @@ header {
   font-size: 2.5rem;
 }
 .text-wrapper1 p {
-  padding-top: 1rem;
-  padding-bottom: 0.5rem;
+  padding-top: 0.4rem;
+  padding-bottom: 0.6rem;
   line-height: 1.7em;
   width: 80%;
   text-align: justify;
